--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ body{
 }
 
 .card{
-    display: block;
+    display: flex;
+    justify-self: center;
     height: 250px;
     width: 200px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
