--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@
 body{
     padding: 0;
     margin: 0;
+    min-height: 100vh;
+    background-color: rgba(0, 0, 0, 0.845);
 }
 
 .header{
@@ -78,11 +80,13 @@ body{
     top: 10px;
 }
 
+
 #card-grid-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 3rem;
     padding: 10px;
+    height: 100%;
 }
 
 .card{
@@ -150,12 +154,21 @@ body{
     flex-wrap: wrap;
  }
 
+ .loading-overlay{
+    position: fixed;
+    height: 70vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+
 #loading{
     display: none;
     visibility: hidden;
     width: 50px;
     height: 50px;
-    border: 5px solid #f3f3f3; 
+    border: 5px solid #836464; 
     border-top: 5px solid #3498db;
     border-radius: 50%;
     animation: rotation 1s linear infinite;
