--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,7 @@ body{
     position: fixed;
     height: 70vh;
     width: 100vw;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 }
