--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body{
     width: 400px;
     height: 200px;
     max-width: 100%;
+    max-height: 70%;
     border-radius: 5px;
     gap: 40px;
     padding: 5px;
@@ -55,6 +56,7 @@ body{
 
 .search-input-container {
     position: relative;
+    max-height: 100%;
 }
 
 .card-overlay-heading{
@@ -92,10 +94,11 @@ body{
 .card{
     display: flex;
     justify-self: center;
-    height: 250px;
+    height: 400px;
     width: 200px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
     position: relative;
+    cursor: pointer;
 }
 
 .card:hover{
@@ -106,21 +109,21 @@ body{
     position: absolute;
     inset: 0;
     width: 100%;
-    height: 100%;
+    height: 80%;
     object-fit: cover;
     z-index: 1;
     transition: all ease-in-out 500ms;
 }
 
 .card-img:hover{
-    filter: blur(0.2px);
+    filter: blur(1px);
 }
 
 .card-overlay{
     display: flex;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 80%;
     color: white;
     z-index: 999;
     opacity: 0;
