example card removed

--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,33 @@ body{
     background: rgba(0, 0, 0, 0.5);
 }
 
+.card-action{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-btn-more-details{
+    max-height: 100%;
+    max-width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    color: white;
+    border: none;
+    background-color: #3e1bbd;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+
+.card-btn-more-details:active{
+    transform: translateY(1px);
+}
+
+
 .flex-center{
     display: flex;
     justify-content: center;
