--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body{
 }
 
 .header{
-    height: 30vh;
+    /* height: 30vh; */
     width: 100%;
     background-size: cover;
     background: url("./assets/header-cover.jpg") no-repeat center;
@@ -40,23 +40,30 @@ body{
 .heading-cover{
     position: relative;
     display: flex;
-    justify-self: center;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 400px;
-    height: 200px;
     max-width: 100%;
-    max-height: 70%;
+    height: 150px;
     border-radius: 5px;
-    gap: 40px;
-    padding: 5px;
+    gap: 20px;
+    margin: 30px 0;
     background-color: rgba(0, 0, 0, 0.68);
+}
+
+.title {
+    text-align: center;
+    color: #ffffff;
+    margin: 0;
+    /* padding-top: 25px; */
+    font-size: 25px;
 }
 
 .search-input-container {
     position: relative;
     max-height: 100%;
+    max-width: 100%;
 }
 
 .card-overlay-heading{
@@ -65,7 +72,7 @@ body{
 }
 
 #search{
-    width: 250px; 
+    /* width: 250px;  */
     max-width: 100%;
     padding: 10px 15px; 
     border: 1px solid #ccc; 
@@ -252,12 +259,4 @@ body{
     100% {
         transform: rotate(360deg);
     }
-}
-
-.title {
-    text-align: center;
-    color: #ffffff;
-    margin: 0;
-    padding-top: 25px;
-    font-size: 35px;
 }
