--- a/movie-details/styles.css
+++ b/movie-details/styles.css
@@ -1,4 +1,154 @@
+:root{
+    --black-primary: rgb(28, 26, 26);
+    --text-primary: rgb(255,255,255);
+}
+
+
+.loading-overlay{
+    position: fixed;
+    height: 70vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#loading{
+    display: none;
+    visibility: hidden;
+    width: 50px;
+    height: 50px;
+    border: 5px solid #836464; 
+    border-top: 5px solid #3498db;
+    border-radius: 50%;
+    animation: rotation 1s linear infinite;
+    margin-top: 100px;
+    align-self: center;
+    justify-self: center;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
 #movie-detail-overlay{
     width: 100%;
     height: 100%;
+}
+
+.header{
+    padding: 10px 40px;
+    background-color: var(--black-primary);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
+    color: var(--text-primary);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;;
+    position: sticky;
+    top:0;
+}
+
+.header-title{
+    margin: 0;
+}
+
+.rating-container{
+    height: 30px;
+    width: 30px;
+}
+
+.rating-img{
+    height: 100%;
+    width: 100%;
+}
+
+.header-subtitle{
+    margin: 4px;
+}
+
+.header-genre-text{
+    margin: 4px;
+}
+
+.header-row{
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+}
+
+#main-container{
+    /* background: url("https://m.media-amazon.com/images/M/MV5BODIyMDdhNTgtNDlmOC00MjUxLWE2NDItODA5MTdkNzY3ZTdhXkEyXkFqcGc@._V1_SX300.jpg"); */
+    height: 80%;
+    width: 100%;
+    /* background-repeat: no-repeat;
+    background-size:contain;
+    background-position: center; */
+    display: flex;
+    justify-content: center;
+}
+
+.main-container-content{
+    margin: 30px;
+    width: 300px;
+    overflow: auto;
+        scrollbar-width: none;
+    /* height: fit-content; */
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.665);
+    color: white;
+    z-index: 2;
+}
+
+.plot-text{
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.action-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+
+#back{
+    max-height: 100%;
+    max-width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    color: white;
+    border: none;
+    background-color: #000000;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    padding: 2px 10px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+#btn-trailer{
+    max-height: 100%;
+    max-width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    color: white;
+    border: none;
+    background-color: blue;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    padding: 2px 10px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
 }
